fixed wrapping in work view

--- a/app/assets/stylesheets/_block.css.scss
+++ b/app/assets/stylesheets/_block.css.scss
@@ -65,8 +65,8 @@
   padding: 2em;
 
   .work {
-    @include span-columns(3);
-    @include omega(4n);
+    @include span-columns(4);
+    @include omega(3n);
 
     img {
       @include span-columns(1 of 3);
